fix play button position on safari mobile

--- a/src/scss/partials/_video.scss
+++ b/src/scss/partials/_video.scss
@@ -78,7 +78,7 @@
     height: auto !important;
     
     @include at-mobile {
-      float:left;
+      //float:left;
       clear:left;
       background:transparent;
     }
